Fixes nav z-index issues

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -162,7 +162,7 @@ nav {
    transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
    -webkit-transition: top 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
    transform-style: flat;
-   z-index: 100 !important;
+   z-index: -1;
    &.is-open {
       top:42px;
    }
@@ -170,7 +170,6 @@ nav {
       margin: -42px auto 0 auto;
 		padding: 0;
 		list-style: none;
-      transform-style: flat;
       li {
          align-items: center;
          &:last-child a::after {
